--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Glasses</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/all.css">
 </head>
 
 <body>
     <header class="header">
-        <img src="img/logo.png" alt="logo" class="logo">
+        <a href="index.html" class="header-logo">Promise-Desert</a>
         <ul class="menu">
             <li><a href="#">系列鏡框</a></li>
             <li><a href="#">門市據點</a></li>
@@ -20,10 +19,12 @@
         </ul>
     </header>
     <div class="main">
-        <span class="main-title-small">Promise-Desert 2020 早春系列</span>
-        <h1 class="main-title">
-            看得清，才能看得遠
-        </h1>
+        <div class="container">
+            <span class="main-title-small">Promise-Desert 2020 早春系列</span>
+            <h1 class="main-title">
+                看得清，才能看得遠
+            </h1>
+        </div>
     </div>
     <section class="service pt-4 pb-4">
         <div class="container">
@@ -54,22 +55,30 @@
     </section>
     <section class="classic pt-4 pb-4">
         <div class="container">
-            <h2 class="subttile">經典系列鏡框</h2>
-            <div class="series">
-                <img src="img/product-1.png" alt="OPTICAL圖" class="series-img">
-                <img src="img/icon-diamond.svg" alt="OPTICAL-icon" class="series-icon">
-                <h3 class="series-title">OPTICAL</h3>
-            </div>
-            <div class="series">
-                <img src="img/product-2.png" alt="SUNGLASSES圖" class="series-img">
-                <img src="img/icon-sun.svg" alt="SUNGLASSES-icon" class="series-icon">
-                <h3 class="series-title">SUNGLASSES</h3>
-            </div>
-            <div class="series">
-                <img src="img/product-3.png" alt="FUNCTIONAL圖" class="series-img">
-                <img src="img/icon-thunder.svg" alt="FUNCTIONAL-icon" class="series-icon">
-                <h3 class="series-title">FUNCTIONAL</h3>
-            </div>
+            <h2 class="subttile mb-4">經典系列鏡框</h2>
+            <ul class="series">
+                <li class="series-item">
+                    <img src="img/product-1.png" alt="OPTICAL圖" class="series-img">
+                    <div class="series-title-box">
+                    <img src="img/icon-diamond.svg" alt="OPTICAL-icon" class="series-icon">
+                    <h3 class="series-title">OPTICAL</h3>
+                </div>
+                </li>
+                <li class="series-item">
+                    <img src="img/product-2.png" alt="SUNGLASSES圖" class="series-img">
+                    <div class="series-title-box">
+                    <img src="img/icon-sun.svg" alt="SUNGLASSES-icon" class="series-icon">
+                    <h3 class="series-title">SUNGLASSES</h3>
+                    </div>
+                </li>
+                <li class="series-item">
+                    <img src="img/product-3.png" alt="FUNCTIONAL圖" class="series-img">
+                    <div class="series-title-box">
+                    <img src="img/icon-thunder.svg" alt="FUNCTIONAL-icon" class="series-icon">
+                    <h3 class="series-title">FUNCTIONAL</h3>
+                </div>
+                </li>
+            </ul>
         </div>
     </section>
     <section class="co-branding pt-4 pb-4">
@@ -94,37 +103,37 @@
                 <li class="comment-item">
                     <img src="img/rec-1.png" alt="Jessy">
                     <div class="comment-con p-1">
-                    <h3 class="comment-title">Jessy</h3>
-                    <p class="comment-txt">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <span class="comment-time">Last updated 3 mins ago</span>
-                </div>
+                        <h3 class="comment-title">Jessy</h3>
+                        <p class="comment-txt">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <span class="comment-time">Last updated 3 mins ago</span>
+                    </div>
                 </li>
                 <li class="comment-item">
                     <img src="img/rec-2.png" alt="Karen">
                     <div class="comment-con p-1">
-                    <h3 class="comment-title">Karen</h3>
-                    <p class="comment-txt">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <span class="comment-time">Last updated 3 mins ago</span>
+                        <h3 class="comment-title">Karen</h3>
+                        <p class="comment-txt">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <span class="comment-time">Last updated 3 mins ago</span>
                     </div>
                 </li>
                 <li class="comment-item">
                     <img src="img/rec-3.png" alt="Chelsea">
                     <div class="comment-con p-1">
-                    <h3 class="comment-title">Chelsea</h3>
-                    <p class="comment-txt">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <span class="comment-time">Last updated 3 mins ago</span>
+                        <h3 class="comment-title">Chelsea</h3>
+                        <p class="comment-txt">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <span class="comment-time">Last updated 3 mins ago</span>
                     </div>
                 </li>
                 <li class="comment-item">
                     <img src="img/rec-4.png" alt="Jane">
                     <div class="comment-con p-1">
-                    <h3 class="comment-title">Jane</h3>
-                    <p class="comment-txt">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <span class="comment-time">Last updated 3 mins ago</span>
+                        <h3 class="comment-title">Jane</h3>
+                        <p class="comment-txt">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <span class="comment-time">Last updated 3 mins ago</span>
                     </div>
                 </li>
             </ul>
@@ -160,7 +169,9 @@
                         意見反應
                         <input type="text" id="comment" placeholder="請輸入您的意見" class="txt p-1 mb-1">
                     </label>
-                    <input type="checkbox" id="agree" name="agree" class="check mb-3">
+                </div>
+                <div class="mb-3 agree">
+                    <input type="checkbox" id="agree" name="agree" class="check">
                     <label for="agree">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label>
                 </div>
                 <div>
@@ -186,7 +197,7 @@
             <ul class="footer-info mb-2">
                 <li class="footer-info-item">
                     <img src="img/icon-phone.svg" alt="phone" class="mr-1">
-                    <p>0800-000-000</p>
+                    <a href="tel:+0800-000-000">0800-000-000</a>
                 </li>
                 <li class="footer-info-item">
                     <img src="img/icon-mail.svg" alt="mail" class="mr-1">
@@ -198,7 +209,7 @@
                     <img src="img/logo.png" alt="logo" class="footer-copyright-logo mr-1">
                     <p> Copyright © 2020 Glasses.All rights reserved.</p>
                 </div>
-                
+
                 <ul class="footer-copyright-link">
                     <li><a href="#">隱私權政策</a></li>
                     <li><a href="#">服務條款</a></li>
